try to fix backface visibility firefox

--- a/src/shared/ui/molecules/m-profit-calculator-new/m-profit-calculator-new.scss
+++ b/src/shared/ui/molecules/m-profit-calculator-new/m-profit-calculator-new.scss
@@ -136,6 +136,9 @@
           position: absolute;
           width: 100%;
           height: 100%;
+          -moz-backface-visibility: hidden;
+          -o-backface-visibility: hidden;
+          -ms-backface-visibility: hidden;
           -webkit-backface-visibility: hidden; /* Safari */
           backface-visibility: hidden;
         }
